--- a/style.css
+++ b/style.css
@@ -613,42 +613,137 @@ body{
   width: 20%;
 }
 /* ===================================================================
- * # s-content
+ * # articls container
  *
  * ------------------------------------------------------------------- */
 
- .s-content {
-  background-color: rgb(187, 33, 33);
-  padding-top: 8.4rem;
-  padding-bottom: 7.2rem;
-  display: inline-block;
-  margin-left: 100px;
-  margin-top: 60px;
+ .articles-container {
   width: 80%;
-  
-}
-.s-content .row{
-  display: flex;
-  width: 100%;
-}
-.s-content article{
-  display: flex;
-  
-  gap: 40px;
-}
-.s-content article img{
-  width: 300px;
-  height: 500px;
-}
-.s-content__header {
-  padding-bottom: 3rem;
-  text-align: center;
+  margin:0px 200px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+
 }
 
+.article {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+}
+.article:hover img{
+  transform: scale(1.1);
+}
+.article:hover h3,.article:hover p {
+  transform: translateY(-250%);
+  bottom: 0;
+  color:#ffffff;
+}
+
+.article:nth-child(1) {
+  grid-row: span 2;
+  
+}
+.article:nth-child(1) img {
+  height: 80%;
+  
+}
+.article:nth-child(2) {
+  padding: 50px;
+  grid-row: span 1.5;
+}
+.article:nth-child(2) p ,.article:nth-child(2) h3{
+  color: #050505;
+  /* width: 10%; */
+}
+
+.article:nth-child(3) {
+  grid-row: span 1;
+}
+
+.article:nth-child(4) {
+  grid-row: span 1;
+}
+.article:nth-child(4) img{
+  height: 80%;
+}
+
+.article:nth-child(5) {
+  grid-row: span 2;
+}
+.article:nth-child(5) img{
+  height: 40%;
+}
+
+.article:nth-child(6) {
+  grid-row: span 1;
+}
+.article:nth-child(6) img{
+  height: 50%;
+}
+
+.article:nth-child(7) {
+  grid-row: span 1;
+}
+.article:nth-child(8) img{
+  height: 80%;
+}
+
+.article:nth-child(8) {
+  grid-row: span 1;
+}
+
+.article:nth-child(9) {
+  grid-row: span 2;
+}
+
+.article:nth-child(10) {
+  grid-row: span 1;
+}
+
+.article:nth-child(11) {
+  grid-row: span 1;
+}
+
+.article:nth-child(12) {
+  grid-row: span 1;
+}
+.article:nth-child(12) img{
+  height: 80%;
+}
+
+.article img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.article h3 {
+  margin-top: 10px;
+  font-size: 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.article p {
+  margin-top: 10px;
+  font-size: 14px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 
 
 .pgn {
   text-align: center;
+  width: 40%;
+  margin-left: 800px;
 }
 
 .pgn ul {
@@ -874,6 +969,25 @@ body{
     -ms-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
 }
+  /* Back to Top Button */
+  #backToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #212121;
+    color: #ffffff;
+    border: none;
+    padding: 10px 15px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#backToTopBtn:hover {
+  background-color: orange; /* Change color on hover */
+}
+
 /* 
 /* ===================================================================
  * # footer
